--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.23.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "reactfire": "^4.2.3"
   },
   "devDependencies": {
